--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   provider: ^6.0.5
   dio: ^4.0.6
   share_plus: ^6.3.0
+  image_downloader: ^0.31.0
+  image_downloader_web: ^2.0.2
 
 dev_dependencies:
   flutter_test:
